# narsprep

backend/: .gitignore  pyproject.toml
backend/app/: context.py
backend/app/engine/: generate.py  index.py
backend/storage/: index_store.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/components/: header.tsx
